# cylera-cli

./: .gitignore  CLAUDE.md  CLI_VS_MCP.md  README.md  cylera.py  cylera_client.py  pyproject.toml  test.sh  test1.expected  test10.expected  test11.expected  test12.expected  test13.expected  test14.expected  test15.expected  test16.expected  test17.expected  test18.expected  test2.expected  test3.expected  test4.expected  test6.expected  test7.expected  test8.expected  test9.expected  test_cylera.sh
skills/cylera-attributes/: SKILL.md
